@@ -3725,6 +3725,7 @@ VOID	UserCfgInit(
 			pAd->ApCfg.MBSSID[j].AuthFailRssiThreshold = 0;
 			pAd->ApCfg.MBSSID[j].AuthNoRspRssiThreshold = 0;
 			pAd->ApCfg.MBSSID[j].RssiLowForStaKickOut = 0;
+			pAd->ApCfg.MBSSID[j].RssiLowForStaKickOutPSM = 0;
 			pAd->ApCfg.MBSSID[j].RssiLowForStaKickOutDelay = 5;
 			pAd->ApCfg.MBSSID[j].ProbeRspRssiThreshold = 0;
 
