@@ -1489,6 +1489,7 @@ typedef struct _MULTISSID_STRUCT {
 	CHAR AuthFailRssiThreshold;
 	CHAR AuthNoRspRssiThreshold;
 	CHAR RssiLowForStaKickOut;
+	CHAR RssiLowForStaKickOutPSM;
 	UCHAR RssiLowForStaKickOutDelay;
 	CHAR ProbeRspRssiThreshold;
 
