@@ -1833,6 +1833,7 @@ typedef struct _MULTISSID_STRUCT {
 	CHAR AuthFailRssiThreshold;
 	CHAR AuthNoRspRssiThreshold;
 	CHAR RssiLowForStaKickOut;
+	CHAR RssiLowForStaKickOutPSM;
 	UCHAR RssiLowForStaKickOutDelay;
 	CHAR ProbeRspRssiThreshold;
 
