@@ -397,6 +397,7 @@ AuthRspRssi=0
 AssocReqRssiThres=0
 AssocRspIgnor=0
 KickStaRssiLow=0
+KickStaRssiLowPSM=0
 KickStaRssiLowDelay=5
 ProbeRspRssi=0
 BandSteering=0
